Bug 2406 - Option TCP_NODELAY not working on HPUX 11
Summary: Option TCP_NODELAY not working on HPUX 11
Status: RESOLVED FIXED
Alias: None
Product: Samba 3.0
Classification: Unclassified
Component: Config Files (show other bugs)
Version: 3.0.11
Hardware: Other HP-UX
: P3 normal
Target Milestone: none
Assignee: Samba Bugzilla Account
QA Contact: Samba QA Contact
URL:
Keywords:
: 2140 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-03-02 02:16 UTC by Torsten Werner
Modified: 2019-06-27 09:54 UTC (History)
2 users (show)

See Also:


Attachments
Fix for TCP_NODELAY at HPUX 11i (1.32 KB, patch)
2005-03-02 02:20 UTC, Torsten Werner
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Torsten Werner 2005-03-02 02:16:04 UTC
Symptom: A error message appears, that the option TCP_NODELAY is unknown

Problem: in include.h is a special handling for HP-UX 11 defined. TCP_NODELAY
and TCP_MAXSEG will be undefined before shadow.h, rpc/rpc.h and rpcsvc/yp_prot.h
will be included. This is done to suppress compiler warnings about redefined
macros. 

But shadow.h is the only one file which redefines TCP_MAXSEG and TCP_NODELAY.

The other undef statements are "finally" samba is compiled without this socket
options.

A patch is attached. But unfortunately I can test it at HPUX 11i only. In any
case it would be better to have a compiler warning then to undef the option.
Comment 1 Torsten Werner 2005-03-02 02:20:22 UTC
Created attachment 1002 [details]
Fix for TCP_NODELAY at HPUX 11i

Apply the patch to include/includes.h
It will do the following:
- remove the undef statements for HPUX at wrong places
- create a compiler warning if TCP_NODELAY and TCP_MAXSEG is not redefined by
shadow.h

It is tested at HP-UX 11i with gcc 3.3.1
Comment 2 Andrew Bartlett 2019-06-11 10:10:38 UTC
*** Bug 2140 has been marked as a duplicate of this bug. ***
Comment 3 Andrew Bartlett 2019-06-27 09:54:37 UTC
Fixed in master by 3a0fd53f7c3cfa9ce26f9f4b1da4a1ac1dc4e44a for Samba 4.11